# autodoxc

./: .gitignore  CLAUDE.md  README.md
src/backend/: .env.example  pyproject.toml  railway.json
src/backend/app/: config.py  main.py
src/backend/app/agents/: __init__.py  doc_type_identifier.py  draft_writer.py  evidence_retriever.py  facts_extractor.py  seed_docs.py  skeleton_composer.py
src/backend/app/api/: schema.py  sessions.py  sse.py
src/backend/app/auth/: __init__.py  clerk_middleware.py  models.py  webhook.py
src/backend/app/data/db/: __init__.py  pool.py
src/backend/app/data/rag/: __init__.py  chunking.py  embedder.py  indexer.py  searcher.py
src/backend/app/llm/: __init__.py  adapter.py  budget.py  factory.py  tiers.py
src/backend/app/llm/prompts/: __init__.py  draft.py  (+2 more)
src/backend/app/orchestrator/: __init__.py  main_sequence.py
src/backend/app/parsers/: __init__.py  docx.py  pdf_text.py  pipeline.py  skeleton_extract.py
src/backend/app/shared/: errors.py
src/backend/migrations/: 001_init.sql
src/backend/tests/: README.md  test_secrets_and_config.py
src/backend/tests/agents/: test_doc_type_identifier.py  test_evidence_retriever.py  test_seed_docs.py
src/backend/tests/api/: test_attachment.py  test_sessions.py
src/backend/tests/llm_eval/: assertions.py  baselines.py  fixtures_loader.py  judge.py  runner.py  test_agents.py
src/backend/tests/parsers/: test_pipeline.py  test_skeleton_extract.py
src/backend/tests/rag/: test_chunking.py  test_embedder.py  test_no_db_safety.py
src/backend/tests/round_trip/: test_types_roundtrip.py
(+108 files in other folders)
