[project]
name = "autodoxc-backend"
version = "0.0.1"
description = "autodoxc backend (walking skeleton)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sse-starlette>=2.1",
    "anthropic>=0.40",
    "httpx>=0.28",
    "python-docx>=1.1",
    "pypdf>=5.1",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "openai>=1.55",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
